# ecoevent-360

./: .gitignore  README.md  README_DEPLOY.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260528_0001_initial_schema.py  20260601_0002_add_audit_logs.py  20260601_0003_add_context_fields_to_audit_logs.py  20260604_0004_add_event_operational_visibility.py  20260610_0005_enable_row_level_security.py  20260610_0006_allow_auth_audit_logs.py  20260612_0007_add_logistics_orders.py  20260612_0008_seed_catalog_items.py  20260614_0009_allow_auth_audit_logs_returning.py  20260614_0010_fix_order_rls_returning.py  20260624_0011_add_logistics_operator_role.py  20260624_0012_add_warehouses.py  20260624_0013_add_inventory_items.py  20260624_0014_add_inventory_item_unit_price.py  20260624_0015_add_stock_balances.py  20260624_0016_add_stock_movements.py  20260624_0017_add_new_logistics_orders.py  20260624_0018_add_logistics_order_reservations.py  20260628_0019_default_logistics_reservation_status.py  20260628_0020_add_logistics_preparation_dispatch.py  20260629_0021_add_logistics_delivery.py  20260629_0022_add_logistics_outcomes.py  (+13 more)
backend/app/: __init__.py  main.py  seed_admin.py
backend/app/api/: deps.py  (+1 more)
backend/scripts/: debug_qr.py  seed_session_comparison_demo.py
backend/tests/: test_client_portal.py  test_forms_session_comparison.py  test_logbook_certification.py  test_logbook_integration.py  test_logbook_rules.py  test_public_forms.py
(+566 files in other folders)
